Update docs, build config, and Terraform for scripts/ restructure
- Update all script paths in CLAUDE.md, README.md, and PROTOCOL_ARCHITECTURE.md
  to reflect move from project root to scripts/{test,deploy,dev}/
- Update IntegrationTestRunner to resolve scripts from scripts/test/
- Add aeron-remote-store and log-viewer modules to apps/pom.xml
- Update AWS deployment docs to use new deploy scripts and dist tarballs
- Fix SSH username (ec2-user -> ubuntu) in AWS_MONITORING_SETUP.md
- Update Terraform user_data to download dist tarball instead of individual JARs
- Add terraform.tfvars to .gitignore (now auto-updated by terraform-deploy.sh)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>